<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.following.FollowingFragment">

    <LinearLayout
        android:id="@+id/llFollowing"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivNotFound"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/not_found" />

        <TextView
            android:id="@+id/tvNotFound"
            style="@style/textLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_not_found" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFollowingError"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivError"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/warning" />

        <TextView
            android:id="@+id/tvError"
            style="@style/textLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_error" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFollowing"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_user" />

    <ProgressBar
        android:id="@+id/pbFollowers"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvFollowing" />


</androidx.constraintlayout.widget.ConstraintLayout>